src/content/styling.css
.mojira-helper-messages-textarea {
    border: 1px solid #2ecc72 !important;
    border-radius: 0 !important;
}

.mojira-helper-messages-textarea-disabled {
    border: 1px solid #cc2e2e !important;
    border-radius: 0 !important;
}

.mojira-helper-messages-textarea-shortcut-only {
    border: 1px solid #cc722e !important;
}

.mojira-helper-messages-button-disabled {
    cursor: not-allowed !important;
}

.mojira-helper-messages-dropdown {
    max-height: 250px;
    overflow-y: scroll;
}

#activitymodule .mod-content.mojira-ext-reverse .issuePanelContainer {
    display: flex;
    flex-direction: column-reverse;
}

#activitymodule .mod-content.mojira-ext-reverse .message-container button {
    margin-top: 10px;
    margin-bottom: 20px;
}

#activitymodule #sort-button {
    display: none !important;
}

#activitymodule #custom-sort-button {
    display: flex;
    align-items: center;
}

